# TaskFit-api

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_db.py  test_oauth.html
alembic/: env.py
alembic/versions/: 9e2a0d8b014e_초기_테이블_생성.py
docs/: API_DESIGN.md  CODE_CONVENTIONS.md  SETUP.md
scripts/: seed_data.py
src/: main.py
src/core/: auth.py  config.py  database.py  response.py
src/models/database/: __init__.py  base.py  company.py  crawl_data.py  evaluation.py  job_role.py  message.py  submission.py  task.py  thread.py  user.py  user_competency.py
src/models/schemas/: auth.py  company.py  crawl_data.py  dashboard.py  evaluation.py  job_role.py  message.py  profile.py  submission.py  task.py  thread.py
src/routers/: auth.py  companies.py  dashboard.py  dev.py  evaluations.py  job_roles.py  profile.py  submissions.py  tasks.py  threads.py
src/services/: ai_service.py  company_service.py  dashboard_service.py  evaluation_service.py  job_role_service.py  profile_service.py  submission_service.py  task_service.py  thread_service.py  user_service.py
